--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,10 @@ authors = ["Marius Meyer <mariusme@mail.upb.de>"]
 version = "0.1.0"
 
 [deps]
+ArrayAllocators = "c9d4266f-a5cb-439d-837c-c97b191379f5"
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+LazyJSON = "fc18253b-5e1b-504c-a4a2-9ece4944c004"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
