Use xrt_jll instead of native XRT

--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,4 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+xrt_jll = "bb401bc5-fb22-5674-bf0e-333823e8805f"
