--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "XRT"
 uuid = "4d396880-2e3f-4be1-8c36-e87777010d00"
-authors = ["Marius Meyer <mariusme@mail.upb.de>"]
+authors = ["Marius Meyer <marius.meyer@uni-paderborn.de>"]
 version = "0.1.3"
 
 [deps]
@@ -14,3 +14,13 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 xrt_jll = "bb401bc5-fb22-5674-bf0e-333823e8805f"
+
+[compat]
+ArrayAllocators = "0.3"
+CxxWrap = "0.16"
+LazyJSON = "0.2"
+Libuuid_jll = "2"
+Pkg = "1"
+Scratch = "1"
+julia = "1.6"
+xrt_jll = "2"
