--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.3"
 
 [deps]
 ArrayAllocators = "c9d4266f-a5cb-439d-837c-c97b191379f5"
+CMake = "631607c0-34d2-5d66-819e-eb0f9aa2061a"
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
 LazyJSON = "fc18253b-5e1b-504c-a4a2-9ece4944c004"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
