Add example to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,15 @@ test_with_buildin:
     - export XCL_EMULATION_MODE=sw_emu
     - julia --color=yes --project=. -e 'using Pkg; Pkg.build(verbose=true); Pkg.test(; coverage = false);'
 
+test_example_buildin:
+  stage: test
+  script:
+    - module load fpga $XRT_MOD
+    - export XCL_EMULATION_MODE=sw_emu
+    - cd examples/stream
+    - make all TARGET=sw_emu
+    - julia --color=yes --project stream_fpga.jl
+
 
 # Documentation
 build-and-deploy:
