Fix stream link config

--- a/examples/stream/link_stream.cfg
+++ b/examples/stream/link_stream.cfg
@@ -1,8 +1,13 @@
 [connectivity]
 nk=stream_calc:2:k1.k2
 
-slr=k1:SLR2
-slr=k2:SLR0
+slr=k1:SLR0
+slr=k2:SLR1
 
-sp=k1.input:DDR[0]
-sp=k2.output:DDR[1]
+sp=k1.in1:DDR[0]
+sp=k1.in2:DDR[0]
+sp=k1.out:DDR[0]
+sp=k2.in1:DDR[1]
+sp=k2.in2:DDR[1]
+sp=k2.out:DDR[1]
+
