--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "XRT"
 uuid = "4d396880-2e3f-4be1-8c36-e87777010d00"
 authors = ["Marius Meyer <marius.meyer@uni-paderborn.de>"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 ArrayAllocators = "c9d4266f-a5cb-439d-837c-c97b191379f5"
@@ -19,7 +19,9 @@ xrt_jll = "bb401bc5-fb22-5674-bf0e-333823e8805f"
 
 [compat]
 ArrayAllocators = "0.3"
+CMake = "1"
 CxxWrap = "0.16"
+DocStringExtensions = "0.9"
 LazyJSON = "0.2"
 Libuuid_jll = "2"
 Pkg = "1"
